# UniversalMailCleaner

./: .gitattributes  .gitignore  ANALYSIS.md  BUGS.md  CHANGELOG.md  CONTRIBUTING.md  EXPORTFORMAT.md  README-DE.md  README.md  START.bat  THIRD_PARTY_LICENSES.txt  UniversalMailCleaner.spec  build_exe.bat  gmail_service.py  imap_client.py  llms.txt  mail_imap_cleaner_v1.py  models.py  profile_exchange.py  pyproject.toml  requirements.txt  scheduler_widget.py  store_package.json  workers.py
.github/workflows/: source-platform-smoke.yml
docs/: WINDOWS_STORE_READINESS.md
scripts/: check_store_readiness.py
tests/: source_platform_smoke.py  test_bug_regressions_20260623.py  test_gmail_service.py  test_imap_service.py  test_main_window.py  test_profile_exchange.py  test_scheduler_widget.py  test_store_readiness.py  test_workers.py
web_companion/: README.md  app.css  app.js  index.html  library.mjs  manifest.webmanifest  sw.js
web_companion/tests/: library.test.mjs  pwa.test.mjs
